QPID-8617 - [Broker-J] Jetty server dependencies update