@@ -21,24 +21,25 @@
 package org.apache.qpid.server.management.plugin.filter;
 
 import java.io.IOException;
-import java.security.Principal;
 import java.security.PrivilegedActionException;
 import java.security.PrivilegedExceptionAction;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
+import java.util.Set;
 
 import javax.security.auth.Subject;
-import javax.servlet.Filter;
-import javax.servlet.FilterChain;
-import javax.servlet.FilterConfig;
-import javax.servlet.ServletContext;
-import javax.servlet.ServletException;
-import javax.servlet.ServletRequest;
-import javax.servlet.ServletResponse;
-import javax.servlet.http.HttpServletRequest;
-import javax.servlet.http.HttpServletResponse;
+
+import jakarta.servlet.Filter;
+import jakarta.servlet.FilterChain;
+import jakarta.servlet.FilterConfig;
+import jakarta.servlet.ServletContext;
+import jakarta.servlet.ServletException;
+import jakarta.servlet.ServletRequest;
+import jakarta.servlet.ServletResponse;
+import jakarta.servlet.http.HttpServletRequest;
+import jakarta.servlet.http.HttpServletResponse;
 
 import org.apache.qpid.server.management.plugin.HttpManagementConfiguration;
 import org.apache.qpid.server.management.plugin.HttpManagementUtil;
@@ -114,13 +115,11 @@ public class InteractiveAuthenticationFilter implements Filter
                                              final HttpRequestInteractiveAuthenticator.AuthenticationHandler handler)
             throws ServletException
     {
-        final Subject tempSubject = new Subject(true,
-                                                Collections.<Principal>singleton(new ServletConnectionPrincipal(httpRequest)),
-                                                Collections.emptySet(),
-                                                Collections.emptySet());
+        final Subject tempSubject = new Subject(true, Set.of(new ServletConnectionPrincipal(httpRequest)), Set.of(), Set.of());
         try
         {
-            Subject.doAs(tempSubject, (PrivilegedExceptionAction<Void>) () -> {
+            Subject.doAs(tempSubject, (PrivilegedExceptionAction<Void>) () ->
+            {
                 handler.handleAuthentication(httpResponse);
                 return null;
             });
